Fix frontend templates

--- a/views/css/beesblogstyle.css
+++ b/views/css/beesblogstyle.css
@@ -8,6 +8,9 @@
 	margin-bottom: 10px;
 	display: inline-block;
 }
+.beesblog-post-list-item {
+	margin-bottom: 20px;
+}
 .beesblog-post-list-bottom {
 	margin-bottom: 10px;
 }
